# img-conv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  constants.py  main.py  pyproject.toml  tables.py
docs/: dev-tools.md  installation.md  usage.md
src/img_conv/: __init__.py  cli.py  constants.py  helpers.py  tables.py
